@@ -495,6 +495,8 @@ class tuition.calculators.TuitionPaymentPlanCalculator {
 	}
 	
 	class tuition.calculators.TuitionCalculatorAggregator extends tuition.calculators.TuitionPaymentPlanCalculator {
+		BigDecimal minimumAmount;
+		BigDecimal maximumAmount;
 	}
 	
 	relation TuitionCalculatorAggregatorTuitionPaymentPlanCalculator {
@@ -705,9 +707,9 @@ class event.AcademicTreasuryEvent extends .org.fenixedu.treasury.domain.event.Tr
 	}
 	
 class event.LegacyAcademicTreasuryEvent extends event.AcademicTreasuryEvent {
-    
+    Boolean legacyEventAccountedAsTuition;
+    Boolean legacyEventDiscountInTuitionFee;
 }
-
 
 	relation AcademicTreasuryEventAcademicServiceRequest {
 		.org.fenixedu.academic.domain.serviceRequests.AcademicServiceRequest playsRole academicServiceRequest {
