@@ -91,6 +91,7 @@ public class FirstTimeStudentConditionRule extends FirstTimeStudentConditionRule
     @Override
     public void delete() {
         setTuitionPaymentPlan(null);
+        setTuitionPaymentPlanCalculator(null);
         setDomainRoot(null);
         deleteDomainObject();
     }
